<resources>
    <string name="app_name">呼救处理</string>
    <string name="info_add_real_name_hint">真实姓名</string>
    <string name="info_add_birth_hint">出生年月</string>
    <string name="info_add_sex_hint">性别</string>
    <string name="info_add_phone_hint">手机号</string>
    <string name="info_add_weight_hint">体重(kg)</string>
    <string name="info_add_blood_type_hint">血型</string>
    <string name="info_add_relationship">关系</string>
    <string name="info_add_family_phone_hint">手机</string>
    <string name="info_add_medical_conditions_hint">医疗状况</string>
    <string name="info_add_medical_notes_hint">病例备注</string>
    <string name="info_add_allergy_hint">过敏反应</string>
    <string name="info_add_medications_hint">用药</string>
    <string name="info_add_address_hint">常住地</string>
    <string name="channel_name">急救通知</string>
    <string name="channel_description">当有新的急救请求时的通知</string>
    <string name="filter_calling">呼救中</string>
    <string name="filter_handled">已处理</string>
    <string name="filter_canceled">已取消</string>
    <string name="filter_show_all">显示全部</string>
    <string name="info_handle_hint">处理</string>
    <string name="statistic_button_hint">统计</string>
    <string name="statistic_preset_hint">预设</string>
    <string name="statistic_handled_number_hint">已处理呼救数</string>
    <string name="statistic_preset_today_button_hint">今日</string>
    <string name="statistic_preset_week_button_hint">本周</string>
    <string name="statistic_preset_month_button_hint">本月</string>
    <string name="statistic_preset_year_button_hint">今年</string>
    <string name="statistic_number_default_value">0</string>
    <string name="statistic_custom_button_hint">自定义日期跨度</string>
</resources>